1998-12-08  Yo Ric Dude  <ricdude@ix.netcom.com>

	* acconfig.h, configure.in, esd-server.h: use autoconf to turn
 	on/off insanely verbose diagnostic information

	* clients.c: improved timeout for select algorithm - if we're
 	recording, return immediately, otherwise timeout after 1/2 an
 	ESD_BUF_SIZE amount of time.

	* esd.c: just use select instead of this nanosleep stuff.

	* samples.c, players.c: fixed problems with looping samples and a
 	pointer assignment warning

1998-11-30  Jeff Garzik  <jgarzik@pobox.com>

	* configure.in:
	Don't dump environment to stdout.  Every user doesn't need to
	see this data, just a few hackers.

1998-11-28  Yo Ric Dude  <ricdude@ix.netcom.com>

	* players.c, samples.c: swap 16 bit audio data if the server and
	client are on differring endian machines. - not tested! =)
	
	* configure.in: --enable-esdplay has been converted to
 	--with-libaudiofile. some files of the esound source WILL NOT
 	currently compile unless libaudiofile is installed.  with the
 	inclusion of the audio file handling routines, libaudiofile is now
 	a requirement for esound.  Anyone wishing to patch the source so
 	it will still compile without libaudiofile is welcome to.

	* esd.h, esdfile.c, esdplay.c, esdsample.c: add a string to
	differentiate between sample files cached by different programs with
	the same name.

	* Makefile.am, esdfile.c, esd.h: added convenient audiofile
	wrappers for playing and caching audio file data. 
	* esd.h, esdlib.c: const clean up.
	* esdmgr.c: added name to print info functions.
	* esdplay.c, esdsample.c: updated to use audiofile wrappers.
	NOTE: this means that the AUDIOFILE library is now REQUIRED for
	proper compilation of esound.  configure.in will be updated soon.
	
Mon Nov 23 06:34:43 PST 1998 Manish Singh <yosh@gimp.org>

	* configure.in: allow manual enable/disabling of alsa support

1998-10-21 Bertrand Guiheneuf <Bertrand.Guiheneuf@inria.fr>

        * use the audiofile.m4 macro to detect libaudiofile
